--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html",
+    "dev": "parcel index.html",
+    "start": "node server.js",
     "build": "parcel build --public-url . index.html"
   },
   "repository": {
@@ -19,9 +20,12 @@
   },
   "homepage": "https://github.com/beamkenya/ElixirConfAfrica#readme",
   "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
     "ol": "^6.5.0",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "serve-static": "^1.14.1"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
