--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
-    "parcel-bundler": "1.12.3"
+    "parcel-bundler": "1.12.3",
+    "parcel-plugin-static-files-copy": "^2.5.1"
   },
   "engines": {
     "node": "12.x"
