--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -15,6 +15,7 @@ jobs:
 
 
     steps:
+      - run: echo "Current Branch is ${{ github.event.release.target_commitish }}"
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
       - name: Use Node.js ${{ matrix.node-version }}
